# stagedesk-pro

./: .gitignore  .oxlintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-installers.yml  release.yml
docs/: RELEASE.md  app-help.md  supabase-auth.sql  supabase-sharing.sql  supabase-storage-hardening.sql  supabase-store-publication-versions.sql  supabase-store-publish.sql  supabase-store.sql  version-history.md
public/auth-callback/: index.html
scripts/: normalize-latest-json.mjs  sync-version.mjs
src/: App.css  App.tsx  AuthGate.tsx  appDocs.ts  auth.test.ts  auth.ts  authContext.ts  chipText.ts  defaultProject.test.ts  defaultProject.ts  diagnostics.ts  domain.ts  dragPreview.ts  index.css  main.tsx  markdown.test.ts  markdown.ts  scriptChip.ts  scriptDialogue.ts  scriptNote.ts  storage.test.ts  storage.ts  storePackage.test.ts  storePackage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
